--- a/PetProject++/src/main/resources/templates/perfil.hbs
+++ b/PetProject++/src/main/resources/templates/perfil.hbs
@@ -128,7 +128,7 @@
                                         <div class="carousel-item" data-bs-interval="3000">
                                             <div class="card">
                                                 <img
-                                                        src="../img/TomHanks/Amelie.jpg"
+                                                        src="data:image/png;base64,{{bytearray}}"
                                                         class="card-img-top"
                                                         alt="..."
                                                         height="300"
