--- a/PetProject++/src/main/resources/templates/registrarMascota.hbs
+++ b/PetProject++/src/main/resources/templates/registrarMascota.hbs
@@ -56,7 +56,7 @@
         <h1>Registro de Mascota</h1>
         <div class="row mt-4">
             <div class="col-12">
-                <form action="../pets" method="post" id="formulario">
+                <form action="../pets" method="post" id="formulario" enctype="multipart/form-data">
                     <div class="row">
                         <div class="col-6">
                             <div class="row mb-4">
@@ -67,9 +67,13 @@
                             <div class="row">
                                 <div class="col-12">
                                     <label for="" class="form-label">Agregar Imagen</label>
-                                    <input accept="image/*" id="imgInp" type="file" class="form-control" onchange="imgImpChange()">
+                                    <input accept="image/*" id="imgInp" type="file" name="imagen" class="form-control" onchange="imgImpChange()">
                                 </div>
                             </div>
+                            <br>
+                            <br>
+                            <br>
+                            <label for="breveDescripcion" class="form-label">Breve descripcion de la mascota</label>
                         </div>
                         <div class="col-6">
                             <label class="form-label">Nombre</label>
@@ -77,36 +81,43 @@
                             <label class="form-label">Apodo</label>
                             <input type="text" class="form-control"  name="apodo">
                             <label class="form-label ">Especie</label>
-                            <select name="especie" id="" class="form-select">
+                            <select name="especie" id="" class="form-select form-select-seguido">
                                 <option value="PERRO">Perro</option>
                                 <option value="GATO">Gato</option>
                             </select>
                             <label class="form-label ">Fecha de nacimiento</label>
-                            <input type="date" class="form-control">
+                            <input type="date" class="form-control" name="fechaDeNacimiento">
                             <label for="" class="form-label ">Sexo</label>
-                            <select class="form-select" name="sexo">
+                            <select class="form-select form-select-seguido" name="sexo">
                                 <option value="null">Desconoce</option>
                                 <option value="MACHO">Macho</option>
                                 <option value="HEMBRA">Hembra</option>
                             </select>
                         </div>
+                        <textarea class="form-control" name="descripcionFisica" id="breveDescripcion"></textarea>
                     </div>
                     <div class="row mt-5">
                         <div class="col-12">
                             <div class="row">
                                 <h3>Caracteristicas especificas</h3>
                                 {{#each caracteristicas}}
-                                    <label for="" class="form-label">{{descripcion}}</label>
-                                    {{#if opciones}}
-                                        <select class="form-select" name="select">
-                                            <option value="null">Desconoce</option>
-                                        {{#each opciones}}
-                                            <option value="{{valor}}">{{valor}}</option>
-                                        {{/each}}
-                                        </select>
-                                    {{else}}
-                                        <input type="text" class="form-control">
-                                    {{/if}}
+                                    <div class="row">
+                                        <div class="col-3">
+                                            <label for="" class="form-label">{{descripcion}}</label>
+                                        </div>
+                                        <div class="col-7">
+                                            {{#if opciones}}
+                                                <select class="form-select form-select-seguido" name="{{descripcion}}">
+                                                    <option value="">Desconoce</option>
+                                                    {{#each opciones}}
+                                                        <option value="{{valor}}">{{valor}}</option>
+                                                    {{/each}}
+                                                </select>
+                                            {{else}}
+                                                <input type="text" class="form-control" name="{{descripcion}}">
+                                            {{/if}}
+                                        </div>
+                                    </div>
                                 {{/each}}
                             </div>
                         </div>
