--- a/PetProject++/src/main/resources/templates/mascotas-encontradas.hbs
+++ b/PetProject++/src/main/resources/templates/mascotas-encontradas.hbs
@@ -81,6 +81,7 @@
                     Encontrado el 21/05/2021
                 </p>
                 <a href="detalle-mascota-encontrada.html" class="btn btn-secondary" style="background-color: blueviolet;">Detalle</a>
+                <button class="btn btn-secondary" style="background-color: blueviolet;" onclick="enviarMensaje()">Contactar</button>
               </div>
             </div>
           </div>
@@ -99,6 +100,7 @@
                     Encontrado el 01/01/2021
                 </p>
                 <a href="#!" class="btn btn-secondary" style="background-color: blueviolet;">Detalle</a>
+                 <button class="btn btn-secondary" style="background-color: blueviolet;" onclick="enviarMensaje()">Contactar</button>
               </div>
             </div>
           </div>
@@ -117,6 +119,7 @@
                     Encontrado el 01/01/2021
                 </p>
                 <a href="#!" class="btn btn-secondary" style="background-color: blueviolet;">Detalle</a>
+                 <button class="btn btn-secondary" style="background-color: blueviolet;" onclick="enviarMensaje()">Contactar</button>
               </div>
             </div>
           </div>
@@ -142,6 +145,7 @@
                     Encontrado el 01/01/2021
                 </p>
                 <a href="#!" class="btn btn-secondary" style="background-color: blueviolet;">Detalle</a>
+                 <button class="btn btn-secondary" style="background-color: blueviolet;" onclick="enviarMensaje()">Contactar</button>
               </div>
             </div>
           </div>
@@ -160,6 +164,7 @@
                     Encontrado el 01/01/2021
                 </p>
                 <a href="#!" class="btn btn-secondary" style="background-color: blueviolet;">Detalle</a>
+                 <button class="btn btn-secondary" style="background-color: blueviolet;" onclick="enviarMensaje()">Contactar</button>
               </div>
             </div>
           </div>
@@ -178,6 +183,7 @@
                     Encontrado el 01/01/2021
                 </p>
                 <a href="#!" class="btn btn-secondary" style="background-color: blueviolet;">Detalle</a>
+                 <button class="btn btn-secondary" style="background-color: blueviolet;" onclick="enviarMensaje()">Contactar</button>
               </div>
             </div>
           </div>
@@ -217,6 +223,7 @@
                     Encontrado el 01/01/2021
                 </p>
                 <a href="#!" class="btn btn-secondary" style="background-color: blueviolet;">Detalle</a>
+                 <button class="btn btn-secondary" style="background-color: blueviolet;" onclick="enviarMensaje()">Contactar</button>
               </div>
             </div>
           </div>
@@ -235,6 +242,7 @@
                     Encontrado el 01/01/2021
                 </p>
                 <a href="#!" class="btn btn-secondary" style="background-color: blueviolet;">Detalle</a>
+                 <button class="btn btn-secondary" style="background-color: blueviolet;" onclick="enviarMensaje()">Contactar</button>
               </div>
             </div>
           </div>
@@ -253,6 +261,7 @@
                     Encontrado el 01/01/2021
                 </p>
                 <a href="#!" class="btn btn-secondary" style="background-color: blueviolet;">Detalle</a>
+                 <button class="btn btn-secondary" style="background-color: blueviolet;" onclick="enviarMensaje()">Contactar</button>
               </div>
             </div>
           </div>
@@ -348,5 +357,29 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script> 
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script src="main.js"></script>
+     <div class="pop-up verModal" id='popUp'>
+    <div class="pop-wrap">
+      <div class="pop-mensaje">
+        <div class="salir">
+          <div class="sal-mod" onclick="salir()">
+            <p>x</p>
+          </div>
+          
+        </div>
+        <div class="titulo">
+          <h3>Mensaje para Rescatista</h3>
+        </div>
+        <form action="" class="form">
+          <div class="textArea">
+            <textarea class="form-control" aria-label="With textarea" cols="40" rows="5" placeholder="redacte su mensaje"></textarea>
+          </div>
+          <div class="boton">
+            <button type="button" class="btn btn-secondary" style="background-color: blueviolet;" onclick="enviarMensaje()">enviar</button>
+          </div>
+         
+        </form>
+      </div>
+    </div>
+  </div>
   </body>
 </html>
