--- a/PetProject++/src/main/resources/templates/pantallaAdmin.hbs
+++ b/PetProject++/src/main/resources/templates/pantallaAdmin.hbs
@@ -23,8 +23,11 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light p-3" id="menu" style="background-image: url('img/banner.PNG')">
+        <a class="navbar-brand" rel="home" href="../Inicio">
+            <img style="max-width:100px;" src="./img/Logo/negro2.png">
+        </a>
         <div class="container">
-            <a class="navbar-brand" href="./index.html">
+            <a class="navbar-brand" href="../Inicio">
                 <span class="fs-5 text-dark fw-bold">Rescate De Patitas</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,19 +37,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="perfil.html">Perfil</a>
+                        <a class="nav-link" aria-current="page" href="../Mascotas-Encontradas">Mascotas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#servicios-mascotas">Mascotas</a>
+                        <a class="nav-link" href="../Inicio#intro">Sistema</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#seccion-contacto">Sistema</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#seccion-contacto">Contactos</a>
+                        <a class="nav-link" href="../Inicio#seccion-contacto">Contactos</a>
                     </li>
                 </ul>
-                <a href="perfil.html" class="nav-item nav-link" aria-expanded="false"><img src="img/Avatar/avatar-gato.png" class="avatar" alt="Avatar" height="50" width="50"><b class="fs-5 text-dark fw-bold">Tom Hanks</b></a>
+                <a href="../Perfil/1" class="nav-item nav-link" aria-expanded="false"><img src="img/Avatar/avatar-gato.png" class="avatar" alt="Avatar" height="50" width="50"><b class="fs-5 text-dark fw-bold">Tom Hanks</b></a>
             </div>
 
         </div>
