--- a/PetProject++/src/main/resources/css/formularioUsuario.css
+++ b/PetProject++/src/main/resources/css/formularioUsuario.css
@@ -283,7 +283,7 @@ form input {
     border: 1px solid rgba(0, 0, 0, 0.6);
     height: 300px;
     border-radius: 15px;
-    overflow: hidden;
+    overflow-y: scroll;
 }
 
 .eliminarPregunta {
