--- a/PetProject++/src/main/resources/templates/pantallaAdmin2.hbs
+++ b/PetProject++/src/main/resources/templates/pantallaAdmin2.hbs
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/pantallaAdmin.css">
     <link rel="stylesheet" href="./css/registrarMascota.css">
-    <script src="js/formulario-quiero-adoptar.js"></script>
+    <script src="../static/js/formulario-quiero-adoptar.js"></script>
     <script src="https://kit.fontawesome.com/7fcb757e78.js" crossorigin="anonymous"></script>
     <title>Diseño de sistemas</title>
 </head>
@@ -110,7 +110,7 @@
                             <input type="text" class="form-control">
                         </div>
                         <div class="col-2">
-                            <input type="button" class="boton " value="AGREGAR">
+                            <input type="button" class="boton " value="AGREGAR" onclick="agregar()">
                         </div>
                     </div>
                     <div class="row mt-3">
@@ -120,7 +120,7 @@
                                     <div class="pregunta ">
                                         <p> pregunta de la ONG</p>
                                     </div>
-                                    <div class="eliminarPregunta">
+                                    <div class="eliminarPregunta" onclick="prueba(this)">
                                         <p> x</p>
                                     </div>
                                 </div>
@@ -128,7 +128,7 @@
                                     <div class="pregunta ">
                                         <p> pregunta de la ONG</p>
                                     </div>
-                                    <div class="eliminarPregunta">
+                                    <div class="eliminarPregunta" onclick="prueba(this)">
                                         <p> x</p>
                                     </div>
                                 </div>
@@ -136,7 +136,7 @@
                                     <div class="pregunta ">
                                         <p> pregunta de la ONG</p>
                                     </div>
-                                    <div class="eliminarPregunta">
+                                    <div class="eliminarPregunta" onclick="prueba(this)">
                                         <p> x</p>
                                     </div>
                                 </div>
