--- a/PetProject++/src/main/resources/templates/mascotas-encontradas.hbs
+++ b/PetProject++/src/main/resources/templates/mascotas-encontradas.hbs
@@ -17,12 +17,12 @@
                         <!-- ENCABEZADO -->
   <!--========================================================== -->
   <nav class="navbar navbar-expand-lg navbar-light p-3"  id="menu" style="background-image: url('img/banner.PNG');  height: 110px">
-    <a class="navbar-brand" rel="home" href="/Inicio">
+    <a class="navbar-brand" rel="home" href="../Inicio">
       <img style="max-width:100px;"
           src="./img/Logo/negro2.png">
     </a>
     <div class="container">
-      <a class="navbar-brand" href="/Inicio">
+      <a class="navbar-brand" href="../Inicio">
           <span class="fs-5 text-dark fw-bold">Rescate De Patitas</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
