--- a/PetProject++/src/main/resources/templates/editor_de_formularios.hbs
+++ b/PetProject++/src/main/resources/templates/editor_de_formularios.hbs
@@ -22,11 +22,11 @@
         <!-- ENCABEZADO -->
         <!--========================================================== -->
         <nav class="navbar navbar-expand-lg navbar-light p-3" id="menu" style="background-image: url('img/banner.PNG');  height: 110px">
-            <a class="navbar-brand" rel="home" href="#">
+            <a class="navbar-brand" rel="home" href="../Inicio">
                 <img style="max-width:100px;" src="./img/Logo/negro2.png">
             </a>
             <div class="container">
-                <a class="navbar-brand" href="./index.html">
+                <a class="navbar-brand" href="../Inicio">
                     <span class="fs-5 text-dark fw-bold">Rescate De Patitas</span>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,13 +35,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#servicios-mascotas">Mascotas</a>
+                            <a class="nav-link" aria-current="page" href="../Mascotas-Encontradas">Mascotas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#seccion-contacto">Contactos</a>
+                            <a class="nav-link" href="../Inicio#seccion-contacto">Contactos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#seccion-contacto">Sistema</a>
+                            <a class="nav-link" href="../Inicio#intro">Sistema</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="true">
