--- a/PetProject++/src/main/resources/static/css/pantallaAdmin.css
+++ b/PetProject++/src/main/resources/static/css/pantallaAdmin.css
@@ -107,7 +107,7 @@ button {
     border: 1px solid rgba(0, 0, 0);
     height: 300px;
     border-radius: 15px;
-    overflow: hidden;
+    overflow-y: scroll;
 }
 
 .eliminarPregunta {
