--- a/PetProject++/src/main/resources/templates/preguntas-caracteristicas-mascotas.hbs
+++ b/PetProject++/src/main/resources/templates/preguntas-caracteristicas-mascotas.hbs
@@ -9,9 +9,9 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/formularioUsuario.css">
-    <script src="./js/formularioUsuario.js"></script>
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/formularioUsuario.css">
+    <script src="../js/formulario-quiero-adoptar.js"></script>
     <script src="https://kit.fontawesome.com/7fcb757e78.js" crossorigin="anonymous"></script>
     <title>Diseño de sistemas</title>
 </head>
@@ -21,12 +21,12 @@
         <!--========================================================== -->
         <!-- ENCABEZADO -->
         <!--========================================================== -->
-        <nav class="navbar navbar-expand-lg navbar-light p-3" id="menu" style="background-image: url('img/banner.PNG');  height: 110px">
+        <nav class="navbar navbar-expand-lg navbar-light p-3" id="menu" style="background-image: url('../img/banner.PNG');  height: 110px">
             <a class="navbar-brand" rel="home" href="#">
-                <img style="max-width:100px;" src="./img/Logo/negro2.png">
+                <img style="max-width:100px;" src="../img/Logo/negro2.png">
             </a>
             <div class="container">
-                <a class="navbar-brand" href="./index.html">
+                <a class="navbar-brand" href="./Inicio">
                     <span class="fs-5 text-dark fw-bold">Rescate De Patitas</span>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -69,7 +69,7 @@
                         
                     </ul>
 
-                    <a href="perfil.html" class="nav-item nav-link" aria-expanded="false"><img src="img/Avatar/avatar-gato.png" class="avatar" alt="Avatar" height="50" width="50"><b class="fs-5 text-dark fw-bold">Tom Hanks</b></a>
+                    <a href="perfil.html" class="nav-item nav-link" aria-expanded="false"><img src="../img/Avatar/avatar-gato.png" class="avatar" alt="Avatar" height="50" width="50"><b class="fs-5 text-dark fw-bold">Tom Hanks</b></a>
                 </div>
             </div>
         </nav>
@@ -81,7 +81,7 @@
                 <div class="preguntas" id='padre'>
 
                     {{#each caracteristicas}}
-                    <div class="prueba mt-3" id="1">
+                    <div class="prueba mt-3" id="{{id}}">
                       
                         <div class="pregunta ">
                             <p>{{descripcion}}</p>
@@ -96,43 +96,23 @@
                         </div>
                     </div>
                     {{/each}}
-
-                    <div class="prueba mt-3">
-                     
-                        <div class="pregunta ">
-                            <p> pregunta de la ONG</p>
-                        </div>
-                        
-                        <div class="eliminarPregunta" onclick="prueba(this)">
-                            <p> x</p>
-                        </div>
-                    </div>
-                    <div class="prueba mt-3">
-                        
-                        <div class="pregunta ">
-                            <p> pregunta de la ONG</p>
-                        </div>
-                       
-                        <div class="eliminarPregunta" onclick="prueba(this)">
-                            <p> x</p>
-                        </div>
-                    </div>
-
                 </div>
             </div>
         </div>
         <div class="row mt-5 mb-3">
             <div class="col-12">
                 <label for="apellido" class="form-label">Pregunta a agregar</label>
-                <div class="row">
+                <form action="../../caracteristicas" method="post" class="col-12 form-agregar-pregunta" id="formulario">
+                    <div class="row">
                     <div class="col-8">
-                        <input type="text" class="form-control" id='nuevaPregunta'>
+                        <input type="text" class="form-control" id='nuevaPregunta' name="descripcion">
                     </div>
                     <div class="col-4">
-                        <button type="button" class="col-12 btn btn-dark" onclick="agregar()" style="background-color :blueviolet; width: 150px;">Agregar</button>
-                        <button type="submit" class="col-12 btn btn-dark" style="background-color :blueviolet; width: 150px;margin-left: 10px;">Guardar</button>
+                        <button type="submit" class="col-12 btn btn-dark" style="background-color :blueviolet; width: 150px;">Agregar</button>
+                        <!--<button type="submit" class="col-12 btn btn-dark" style="background-color :blueviolet; width: 150px;margin-left: 10px;">Guardar</button>-->
                     </div>
-                </div>
+                    </div>
+                </form>
             </div>
         </div>
     </main>
