--- a/PetProject++/src/main/resources/templates/mascotaPerdidaID.hbs
+++ b/PetProject++/src/main/resources/templates/mascotaPerdidaID.hbs
@@ -57,27 +57,6 @@
         <div class="row mt-4">
             <div class="col-12">
                 <form action="../forms/mascotaPerdida" method="post" class="border-top border-2 border-dark" enctype="multipart/form-data" id="form">
-                    <h3 class="mt-4">Datos de Personales</h3>
-                    <div class="row">
-                        <div class="col-6">
-                            <label for="nombre" class="form-label "> Nombre</label>
-                            <input type="text" class="form-control" name="nombre" id="nombre">
-                            <label for="apellido" class="form-label "> Apellido</label>
-                            <input type="text" class="form-control" name="apellido" id="apellido">
-                            <label for="fechaNacimiento" class="form-label ">Fecha de Nacimiento</label>
-                            <input type="date" class="form-control" name="fechaNacimiento" id="fechaNacimiento">
-                        </div>
-                        <div class="col-6">
-                            <label for="tipoDocumento" class="form-label "> Tipo de Documento</label>
-                            <select name="tipoDocumento" id="tipoDocumento" class="form-select">
-                                <option value="DNI">DNI</option>
-                                <option value="PASAPORTE">Pasaporte</option>
-                                <option value="PRECARIA">Precaria</option>
-                            </select>
-                            <label for="nroDocumento" class="form-label mt-2 "> Numero de Documento</label>
-                            <input type="text" class="form-control" name="nroDocumento" id="nroDocumento">
-                        </div>
-                    </div>
                     <div class="row border-top border-secondary">
                         <h3 class="mt-4">Datos de Contacto</h3>
                         <div class="row mt-3">
@@ -232,6 +211,8 @@
                                     <input type="file" class="form-control" name="imagen" accept=".png, .jpg">
                                 </div>
                                 <div class="col-3">
+                                    <label for="" class="form-label "> ID Mascota</label>
+                                    <input type="text" class="form-control" name="mascota">
                                 </div>
                             </div>
                             <br>
@@ -258,44 +239,6 @@
                                 </div>
                             </div>
                             <br>
-                            <div class="row border-top border-secondary">
-                                <h3 class="mt-4">Caracteristicas especificas</h3>
-                                <div class="col-12">
-                                {{#each caracteristicas}}
-                                    <div class="row">
-                                        <div class="col-4">
-                                            <label for="" class="form-label">{{descripcion}}</label>
-                                        </div>
-                                        <div class="col-7">
-                                            {{#if opciones}}
-                                                <select class="form-select form-select-seguido" name="{{descripcion}}">
-                                                    <option value="">Desconoce</option>
-                                                {{#each opciones}}
-                                                    <option value="{{valor}}">{{valor}}</option>
-                                                {{/each}}
-                                                </select>
-                                            {{else}}
-                                                <input type="text" class="form-control" name="{{descripcion}}">
-                                            {{/if}}
-                                        </div>
-                                    </div>
-                                   
-                                {{/each}}
-                                </div>
-                                
-                            </div>
-                            <br>
-                            <label for="descripcion" class="form-label "> Descripcion de la mascota</label>
-                            <textarea id="descripcion" class="form-control" name="descripcion"></textarea>
-                            <br>
-                            <label for="direccionEncontrada " class="form-label ">Direccion donde se encontro</label>
-                            <input type="text " class="form-control " name="lugarEncuentroMascota" id="direccionEncontrada">
-                            <div class="row mt-5">
-                                <div class="col-12 d-flex justify-content-center">
-                                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3035.277999585691!2d-58.52786464485551!3d-34.49496291787473!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1629774484236!5m2!1ses-419!2sar" width="450" height="350" style="border:0;"
-                                        allowfullscreen="" loading="lazy"></iframe>
-                                </div>
-                            </div>
                             <div class="row mt-6">
                                 <div class="col-12 d-flex justify-content-center">
                                     <div>
