agregado atributo ong a mascota

--- a/PetProject++/src/main/resources/templates/perfil.hbs
+++ b/PetProject++/src/main/resources/templates/perfil.hbs
@@ -145,6 +145,7 @@
                                                     {{/if}}
                                                     <a href="#!" class="btn btn-secondary"  style="background-color: blueviolet;">Editar</a>
                                                     <a href="../Dar-en-Adopcion/{{id}}" class="btn btn-secondary"  style="background-color: blueviolet;">Dar en Adopcion</a>
+                                                    <a href="#!" class="btn btn-secondary"  style="background-color: blueviolet;">Mostrar QR</a>
                                                 </div>
                                             </div>
                                         </div>
